--- a/donation.html
+++ b/donation.html
@@ -59,7 +59,7 @@ permalink: /donacije/
       <br><br>
       Ukoliko želite biti naš donator dugoročno, molimo vas popunite obrazac 
       <a href="{{ '/assets/prijavnice/PRIJAVNICA-za-donatore.pdf' | url }}">
-        @PRIJAVNICA - za donatore
+        PRIJAVNICA - za donatore
       </a>
     </p>
   </section>
