--- a/radionice.html
+++ b/radionice.html
@@ -11,7 +11,11 @@ permalink: /radionice/
       <h2>👐 Inkluzivne radionice djece i mladih</h2>
       <p>U prostorijama Humanitarne udruge Adonis</p>
     </header>
-
+        <div class="gallery-grid">
+          <a href="{{ src | url }}" class="gallery-item" data-full="{{ src | url }}">
+            <img src="{{ src | url }}" alt="{{ alt }}" loading="lazy" decoding="async">
+          </a>
+        </div>
     <p>
       Dva puta mjesečno, u popodnevnim satima, u prostorijama HU Adonis održavaju se inkluzivne radionice 
       djece i mladih s i bez poteškoća u pratnji roditelja.
