--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ permalink: /
 <!-- Banner -->
 <section id="banner">
   <div class="filter">
-    <h2>Humantirna Udruga Adonis</h2>
+    <h2>Humanitarna Udruga Adonis</h2>
     <p>Za djecu s poteškoćama i bez odgovarajuće roditeljske skrbi</p>
     <ul class="actions special">
       <li><a href="{{ '/donacije/' | url }}" class="button primary">Doniraj sada</a></li>
