--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: base.njk
 title: O nama
-permalink: /about/
+permalink: /o-nama/
 ---
 <section id="main" class="container">
 <section class="box special">
