Font, navigacija i linkovi. Banner update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ permalink: /
     <p>Za djecu s poteškoćama i bez odgovarajuće roditeljske skrbi</p>
     <ul class="actions special">
       <li><a href="{{ '/donacije/' | url }}" class="button primary">Doniraj sada</a></li>
-      <li><a href="{{ '/about/' | url }}" class="button">Saznaj više</a></li>
+      <li><a href="{{ '/o-nama/' | url }}" class="button">Saznaj više</a></li>
     </ul>
   </div>
 </section>
@@ -50,4 +50,21 @@ permalink: /
       </section>
   </div>
 </section>
-
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "NGO",
+  "name": "Humanitarna udruga Adonis",
+  "url": "https://udrugaadonis.hr/",
+  "logo": "https://udrugaadonis.hr/images/logo.png",
+  "sameAs": [
+    "https://www.instagram.com/udrugaadonis/",
+  ],
+  "email": "udruga.adonis@gmail.com",
+  "telephone": "+385955779190",
+  "address": {
+    "@type": "PostalAddress",
+    "addressCountry": "HR"
+  }
+}
+</script>
